--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -1,8 +1,9 @@
 {% extends 'main_header.html' %}
 {% block body %}
-<table style="width: 90%" class="one-column-emphasis">
+<table style="width: 90%" class="one-column-emphasis process-menu">
     <thead>
     <tr class="oce-first">
+        <th scope="col"><input type='checkbox' name ='select_all' onclick='toggle(this)'/> </th>
         <th scope="col">On/Off</th>
         <th scope="col">Trigger Is Alive</th>
         <th scope="col">Process Name</th>
@@ -14,8 +15,12 @@
     </thead>
     <tbody>
 
-    {%- for row in details.managed_entries %}
+    {%- for row in details.managed_entries -%}
     <tr>
+        <td>
+            {% set value = {'process_name': '{{ row[2] }}', 'timeperiod': '{{ row[4] }}' } %}
+            <input type="checkbox" name="batch_processing" value="{{ value }}"/>
+        </td>
         <td>
             <form method="GET" action="/action_change_state/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
@@ -44,7 +49,7 @@
         <td>{{ row[4] }}</td>
         <td>{{ row[5] }}</td>
     </tr>
-    {%- endfor %}
+    {%- endfor -%}
 
     </tbody>
 </table>
@@ -71,5 +76,16 @@
 
     </tbody>
 </table>
+
+<div class="hide" id="rmenu">
+    <ul>
+        <li>
+            <a onclick="process_batch('action_activate_trigger')">Activate</a>
+        </li>
+        <li>
+            <a onclick="process_batch('action_deactivate_trigger')">Deactivate</a>
+        </li>
+    </ul>
+</div>
 
 {% endblock %}
