--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='ui_style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='scheduler_ui.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='json_formatter.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
     <script type="text/javascript">
