--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='jquery.dataTables-1.9.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='scheduler_ui.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='menu.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='navigation_menu.js') }}"></script>
     <title>main_header</title>
 </head>
 
