--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -18,13 +18,13 @@
     {%- for row in details.managed_entries -%}
     <tr>
         <td>
-            {% set value = {'process_name': '{{ row[2] }}', 'timeperiod': '{{ row[4] }}' } %}
+            {% set value = "{ process_name: '" + row[2] + "', timeperiod: 'NA' }" %}
             <input type="checkbox" name="batch_processing" value="{{ value }}"/>
         </td>
         <td>
             <form method="GET" action="/action_change_state/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[4] }}" />
+                <input type="hidden" name="timeperiod" value="NA" />
                 <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
                 <input type="submit" value="Apply" />
             </form>
@@ -34,7 +34,7 @@
         <td>
             <form method="GET" action="/action_change_interval/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[4] }}" />
+                <input type="hidden" name="timeperiod" value="NA" />
                 <input type="text" size="8" maxlength="32" name="interval" value="{{ row[3] }}" />
                 <input type="submit" value="Apply" />
             </form>
@@ -42,7 +42,7 @@
         <td>
             <form method="GET" action="/action_trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[4] }}" />
+                <input type="hidden" name="timeperiod" value="NA" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
@@ -80,10 +80,10 @@
 <div class="context_menu_hide" id="rmenu">
     <ul>
         <li>
-            <a onclick="process_batch('action_activate_trigger')">Activate</a>
+            <a onclick="process_batch('action_activate_trigger', false)">Activate</a>
         </li>
         <li>
-            <a onclick="process_batch('action_deactivate_trigger')">Deactivate</a>
+            <a onclick="process_batch('action_deactivate_trigger', false)">Deactivate</a>
         </li>
     </ul>
 </div>
