--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -4,8 +4,7 @@
     <thead>
     <tr class="oce-first">
         <th scope="col"><input type='checkbox' name ='select_all' onclick='toggle_all_checkboxes(this)'/> </th>
-        <th scope="col">On/Off</th>
-        <th scope="col">Trigger Is Alive</th>
+        <th scope="col">Trigger On/Alive</th>
         <th scope="col">Process Name</th>
         <th scope="col">Entry Name</th>
         <th scope="col">Trigger Frequency</th>
@@ -21,21 +20,18 @@
     <tbody>
 
     {%- for row in details.freerun_entries %}
+    {%- if row[0] and not row[1] or not row[0] and row[1] -%}
+    <tr class="state_inconsistent">
+    {%- elif not row[1] -%}
+    <tr class="state_inactive">
+    {%- else -%}
     <tr>
+    {%- endif -%}
         <td>
             {% set value = "{ process_name: '" + row[2] + "', entry_name: '" + row[3] + "', is_freerun: 'True' }" %}
             <input type="checkbox" name="batch_processing" value="{{ value }}"/>
         </td>
-        <td>
-            <form method="GET" action="/action_change_state/">
-                <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
-                <input type="hidden" name="is_freerun" value="True" />
-                <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
-                <input type="submit" value="Apply" />
-            </form>
-        </td>
-        <td>{{ row[1] }}</td>
+        <td>{{ row[0] }} / {{ row[1] }}</td>
         <td>{{ row[2] }}</td>
         <td>{{ row[3] }}</td>
         <td>
@@ -93,7 +89,7 @@
     {%- endfor %}
 
     <tr>
-        <td colspan="12">
+        <td colspan="13">
             {% set form_url = url_for('new_schedulable_form') %}
             <a href="#" onClick="MyWindow=window.open('{{ form_url }}','New Freerun Trigger',
                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
