--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -21,7 +21,7 @@
 <pre id="json"></pre>
 
 
-<form style="text-align: left" action="/action_update_freerun_entry">
+<form method="POST" action="/action_update_freerun_entry/">
     <table class="one-column-emphasis">
         <tr>
             <td>Process name:</td>
@@ -35,7 +35,7 @@
         </tr>
         <tr>
             <td>Entry name:</td>
-            <td><input type="text" name="entry_name"
+            <td><input type="text" name="entry_name" style="text-align: left"
                        value="{% if handler %}{{ handler.scheduler_entry.entry_name }}{% endif %}"
                     {% if handler %} readonly {% endif %}></td>
             <td>Name of the schedulable item. Has to be unique.</td>
@@ -43,7 +43,7 @@
 
         <tr>
             <td>Description:</td>
-            <td><input type="text" name="description"
+            <td><input type="text" name="description" style="text-align: left"
                        value="{% if handler %}{{ handler.scheduler_entry.description }}{% endif %}"></td>
             <td>Human-targeted description of the schedulable item</td>
         </tr>
@@ -65,7 +65,7 @@
 
         <tr>
             <td>Trigger time:</td>
-            <td><input type="text" maxlength="32" name="trigger_time"
+            <td><input type="text" maxlength="32" name="trigger_time" style="text-align: left"
                        value="{%- if handler %}{{ handler.scheduler_entry.trigger_time }}{%- endif %}"/></td>
             <td>Either of:
                 <ul>"every XXX" where XXX stands for seconds; For instance: "every 60"</ul>
@@ -85,10 +85,15 @@
             <td>This is process-specific set of arguments that are used to construct and run an actual job</td>
         </tr>
         <td colspan="3" align="center">
-            <input type="submit" name="insert_button" value="Insert" onclick="window.close()"/>
-            <input type="submit" name="update_button" value="Update" onclick="window.close()"/>
-            <input type="submit" name="delete_button" value="Delete" onclick="window.close()" {% if not handler %} disabled {% endif %}/>
-            <input type="submit" name="cancel_button" value="Cancel" onclick="window.close()"/>
+            <div id="buttons">
+                <input type="submit" name="insert_button" value="Insert" onclick="window.close()"/>
+                <input type="submit" name="update_button" value="Update" onclick="window.close()" {% if not handler %} disabled {% endif %}/>
+                <input type="submit" name="delete_button" value="Delete" onclick="window.close()" {% if not handler %} disabled {% endif %}/>
+                <input type="submit" name="cancel_button" value="Cancel" onclick="window.close()"/>
+
+                <!-- Need this to have the buttons actually inside div#buttons -->
+                <div style="clear:both"></div>
+            </div>
         </td>
     </table>
 </form>
