- starting with the #8

--- a/synergy/mx/templates/processing_details.html
+++ b/synergy/mx/templates/processing_details.html
@@ -12,4 +12,15 @@
         </div>
     </div>
 
+    <div class="context_menu_hide" id="rmenu">
+        <ul>
+            <li>
+                <a onclick="process_batch('action_skip', false)">Activate</a>
+            </li>
+            <li>
+                <a onclick="process_batch('action_reprocess', false)">Deactivate</a>
+            </li>
+        </ul>
+    </div>
+
 {% endblock %}
