- enabling right-mouse-click menu for the multi-level trees, as well as two-level

--- a/synergy/mx/templates/processing_details.html
+++ b/synergy/mx/templates/processing_details.html
@@ -15,10 +15,10 @@
     <div class="context_menu_hide" id="rmenu">
         <ul>
             <li>
-                <a onclick="process_batch('action_skip', false)">Activate</a>
+                <a onclick="process_batch('action_skip', false)">Skip</a>
             </li>
             <li>
-                <a onclick="process_batch('action_reprocess', false)">Deactivate</a>
+                <a onclick="process_batch('action_reprocess', false)">Reprocess</a>
             </li>
         </ul>
     </div>
