--- a/synergy/mx/static/scheduler_ui.css
+++ b/synergy/mx/static/scheduler_ui.css
@@ -646,7 +646,7 @@ table.display tr.odd.row_selected td {
     z-index:1000;
     position: absolute;
     background-color: whitesmoke;
-    border: 0.2em solid darkblue;
+    border: 0.2em ridge #000000;
     padding: 1px;
     display: block;
     margin: 0;
