- adding dependent_on trees to the list of the trees details

--- a/synergy/mx/templates/timetable_details.html
+++ b/synergy/mx/templates/timetable_details.html
@@ -27,6 +27,7 @@
         <td>{{ process_details[3] }}</td>
         <td>{{ process_details[4] }}</td>
         <td>{{ process_details[5] }}</td>
+        <td>{{ process_details[6] }}</td>
     </tr>
     {% endfor %}
 
