--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -30,10 +30,14 @@
         <tr>
             <td>Process name:</td>
             <td><select name="process_name" style="width: 236px">
-                <option value="{% if handler %}{{ handler.scheduler_entry.process_name }}{% endif %}">
-                    {%- if handler -%}{{ handler.scheduler_entry.process_name }}{%- endif -%}
+            {%- for process_name, process_entry in synergy_process_context.iteritems() -%}
+                {%- if process_entry.process_type is not none -%}
+                <option value="{{ process_name }}"
+                    {%- if handler and process_name == handler.scheduler_entry.process_name -%} selected {%- endif -%} >
+                {{ process_name }}
                 </option>
-                <option value="BashDriver">BashDriver</option>
+                {%- endif -%}
+            {%- endfor -%}
             </select></td>
             <td></td>
         </tr>
