--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -29,16 +29,20 @@
     <table class="one-column-emphasis">
         <tr>
             <td>Process name:</td>
-            <td><select name="process_name" style="width: 236px">
-            {%- for process_name, process_entry in synergy_process_context.iteritems() -%}
-                {%- if process_entry.process_type is not none -%}
-                <option value="{{ process_name }}"
-                    {%- if handler and process_name == handler.scheduler_entry.process_name -%} selected {%- endif -%} >
-                {{ process_name }}
-                </option>
-                {%- endif -%}
-            {%- endfor -%}
-            </select></td>
+            <td>
+            {%- if not handler -%}
+                <select name="process_name" style="width: 236px">
+                {%- for process_name, process_entry in synergy_process_context.iteritems() -%}
+                    {%- if process_entry.process_type is not none -%}
+                        <option value="{{ process_name }}">{{ process_name }}</option>
+                    {%- endif -%}
+                {%- endfor -%}
+                </select>
+            {%- else -%}
+                <input type="text" name="process_name" style="text-align: left"
+                       value="{{ handler.scheduler_entry.process_name }}" readonly>
+            {%- endif -%}
+            </td>
             <td></td>
         </tr>
         <tr>
@@ -94,9 +98,12 @@
         </tr>
         <td colspan="3" align="center">
             <div id="buttons">
+            {%- if not handler -%}
                 <input type="submit" name="insert_button" value="Insert" onclick="closeWindow()"/>
-                <input type="submit" name="update_button" value="Update" onclick="closeWindow()" {% if not handler %} disabled {% endif %}/>
-                <input type="submit" name="delete_button" value="Delete" onclick="closeWindow()" {% if not handler %} disabled {% endif %}/>
+            {%- else -%}
+                <input type="submit" name="update_button" value="Update" onclick="closeWindow()"/>
+                <input type="submit" name="delete_button" value="Delete" onclick="closeWindow()"/>
+            {%- endif -%}
                 <input type="submit" name="cancel_button" value="Cancel" onclick="closeWindow()"/>
 
                 <!-- Need this to have the buttons actually inside div#buttons -->
