- changing favicon to sy_brown

--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -5,7 +5,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='scheduler_ui.css') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_blue.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_brown.png') }}">
     <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='jquery.dataTables-1.9.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='scheduler_ui.js') }}"></script>
