--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -20,49 +20,49 @@
     <tbody>
 
     {%- for row in details.freerun_entries %}
-    {%- if row[0] and not row[1] or not row[0] and row[1] -%}
+    {%- if row["is_on"] != row["is_alive"] -%}
     <tr class="state_inconsistent">
-    {%- elif not row[1] -%}
+    {%- elif not row["is_alive"] -%}
     <tr class="state_inactive">
     {%- else -%}
     <tr>
     {%- endif -%}
         <td>
-            {% set value = "{ process_name: '" + row[2] + "', entry_name: '" + row[3] + "', is_freerun: 'True' }" %}
+            {% set value = "{ process_name: '" + row["process_name"] + "', entry_name: '" + row["entry_name"] + "', is_freerun: 'True' }" %}
             <input type="checkbox" name="batch_processing" value="{{ value }}"/>
         </td>
-        <td>{{ row[0] }} / {{ row[1] }}</td>
-        <td>{{ row[2] }}</td>
-        <td>{{ row[3] }}</td>
+        <td>{{ row["is_on"] }} / {{ row["is_alive"] }}</td>
+        <td>{{ row["process_name"] }}</td>
+        <td>{{ row["entry_name"] }}</td>
         <td>
             <form method="GET" action="/action_change_interval/">
-                <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="hidden" name="process_name" value="{{ row["process_name"] }}" />
+                <input type="hidden" name="entry_name" value="{{ row["entry_name"] }}" />
                 <input type="hidden" name="is_freerun" value="True" />
-                <input type="text" size="8" maxlength="32" name="interval" value="{{ row[4] }}" />
+                <input type="text" size="8" maxlength="32" name="interval" value="{{ row["trigger_frequency"] }}" />
                 <input type="submit" value="Apply" />
             </form>
         </td>
         <td>
             <form method="GET" action="/action_trigger_now/">
-                <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="hidden" name="process_name" value="{{ row["process_name"] }}" />
+                <input type="hidden" name="entry_name" value="{{ row["entry_name"] }}" />
                 <input type="hidden" name="is_freerun" value="True" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
 
-        <td>{{ row[5] }}</td>
-        <td>{{ row[6]|jsonify }}</td>
+        <td>{{ row["next_run_in"] }}</td>
+        <td>{{ row["arguments"]|jsonify }}</td>
         <td>
-            {% set url = 'action=action_get_log' + '&process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True' %}
+            {% set url = 'action=action_get_log' + '&process_name=' + row["process_name"] + '&entry_name=' + row["entry_name"] + '&is_freerun=True' %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=720,height=480'); return false;">
                 <input type="submit" value="View Log"/>
             </form>
         </td>
         <td>
-            {% set url = 'action=action_get_uow' + '&process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True' %}
+            {% set url = 'action=action_get_uow' + '&process_name=' + row["process_name"] + '&entry_name=' + row["entry_name"] + '&is_freerun=True' %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Get Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
                 <input type="submit" value="Get Uow"/>
@@ -70,15 +70,15 @@
         </td>
         <td>
             <form method="GET" action="/action_cancel_uow/">
-                <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="hidden" name="process_name" value="{{ row["process_name"] }}" />
+                <input type="hidden" name="entry_name" value="{{ row["entry_name"] }}" />
                 <input type="hidden" name="is_freerun" value="True" />
                 <input type="submit" value="Cancel Uow" />
             </form>
         </td>
         <td>
             {% set form_url = url_for('open_schedulable_form') %}
-            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True' + '&is_new_entry=False'%}
+            {% set url = form_url + '?process_name=' + row["process_name"] + '&entry_name=' + row["entry_name"] + '&is_freerun=True' + '&is_new_entry=False'%}
             <form method="GET"
                  onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
