--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -15,36 +15,36 @@
     <tbody>
 
     {%- for row in details.managed_entries -%}
-    {%- if row["is_on"] != row["is_alive"] -%}
+    {%- if row.is_on != row.is_alive -%}
     <tr class="state_inconsistent">
-    {%- elif not row["is_alive"] -%}
+    {%- elif not row.is_alive -%}
     <tr class="state_inactive">
     {%- else -%}
     <tr>
     {%- endif -%}
         <td>
-            {% set value = "{ process_name: '" + row["process_name"] + "', timeperiod: 'NA' }" %}
+            {% set value = "{ process_name: '" + row.process_name + "', timeperiod: 'NA' }" %}
             <input type="checkbox" name="batch_processing" value="{{ value }}"/>
         </td>
-        <td>{{ row["is_on"] }} / {{ row["is_alive"] }}</td>
-        <td>{{ row["process_name"] }}</td>
+        <td>{{ row.is_on }} / {{ row.is_alive }}</td>
+        <td>{{ row.process_name }}</td>
         <td>
             <form method="GET" action="/action_change_interval/">
-                <input type="hidden" name="process_name" value="{{ row["process_name"] }}" />
+                <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="timeperiod" value="NA" />
-                <input type="text" size="8" maxlength="32" name="interval" value="{{ row["trigger_frequency"] }}" />
+                <input type="text" size="8" maxlength="32" name="interval" value="{{ row.trigger_frequency }}" />
                 <input type="submit" value="Apply" />
             </form>
         </td>
         <td>
             <form method="GET" action="/action_trigger_now/">
-                <input type="hidden" name="process_name" value="{{ row["process_name"] }}" />
+                <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="timeperiod" value="NA" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
-        <td>{{ row["next_run_in"] }}</td>
-        <td>{{ row["next_timeperiod"] }}</td>
+        <td>{{ row.next_run_in }}</td>
+        <td>{{ row.next_timeperiod }}</td>
     </tr>
     {%- endfor -%}
 
