--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -20,7 +20,7 @@
         <th>Synergy Scheduler</th>
         <th style="text-align: left">build. {{ get_version() }}</th>
         <th></th>
-        {%- for mx_rule, mx_name in mx_processing_context.iteritems() -%}
+        {%- for mx_rule, mx_name in mx_processing_context.items() -%}
         <th></th>
         {%- endfor -%}
         <th style="text-align: right">page last updated: {{ get_current_time() }}</th>
@@ -30,7 +30,7 @@
     <tr>
         <td><a href="{{ url_for('scheduler_managed_entries') }}">scheduler managed entries</a></td>
         <td><a href="{{ url_for('scheduler_freerun_entries') }}">scheduler freerun entries</a></td>
-        {%- for mx_rule, mx_page_name in mx_processing_context.iteritems() %}
+        {%- for mx_rule, mx_page_name in mx_processing_context.items() %}
             <td><a href="/{{ mx_rule }}">{{ mx_page_name }}</a></td>
         {%- endfor -%}
         <td><a href="{{ url_for('processing_statements') }}">processing statements</a></td>
