--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -32,7 +32,7 @@
             <td>
             {%- if not handler -%}
                 <select name="process_name" style="width: 236px">
-                {%- for process_name, process_entry in synergy_process_context.iteritems() -%}
+                {%- for process_name, process_entry in synergy_process_context.items() -%}
                     {%- if process_entry.process_type is not none and process_entry.process_type != 'type_gc' -%}
                         <option value="{{ process_name }}" {%- if process_name == 'BashDriver' -%} selected {%- endif -%} >{{ process_name }}</option>
                     {%- endif -%}
