- introducing base_dao to master branch  - updating Performance Tracker output format

--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -64,11 +64,11 @@
     <tbody>
 
     <tr>
-        <td>{{ details.footprint[0] }}</td>
-        <td>{{ details.footprint[1] }}</td>
-        <td>{{ details.footprint[2] }}</td>
-        <td>{{ details.footprint[3] }}</td>
-        <td>{{ details.footprint[4] }}</td>
+        <td>{{ details.footprint.memory_rss }}</td>
+        <td>{{ details.footprint.memory_vms }}</td>
+        <td>{{ details.footprint.cpu_utilization }}</td>
+        <td>{{ details.footprint.mem_virtual_free }}</td>
+        <td>{{ details.footprint.mem_swap_free }}</td>
     </tr>
 
     </tbody>
